Refactors html pages, adds css styling

--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -3,30 +3,33 @@
 </html>
 <body>
   <% if flash[:goodbye] %>
-  <%= flash[:goodbye] %><br>
+    <%= flash[:goodbye] %><br>
   <% end %>
-  <h1>Chitter!</h1>
-  <h3>Everyone's favorite social portal :)</h3>
-  <br>
+  <h3 id="tag_name">Everyone's favorite social portal :)</h3>
   <% if current_user %>
-  <form action='/posts'>
-    <input type='submit' value='View Posts'>
-  </form>
+    <form action='/posts'>
+      <input type='submit' value='View Posts'>
+    </form>
   <% else %>
-  Sign in:
-  <form action='/sign_in' method='post'>
-    <input type='email' name='email' placeholder='Email Address'>
-    <input type='password' name='password' placeholder='Pasword'>
-    <input type='submit' value='Sign In'>
-  </form>
-  <% if flash[:errors] %>
-    <%= flash[:errors] %>
-  <% end %>
-  <form action='/posts'>
-    <br><input type='submit' value='Continue without sign in'>
-  </form>
-  <form action='/register'>
-    <br><input type='submit' value='Sign up!'>
-  </form>
+    <div id="sign_in">
+      <p class="text">Log in to your account</p>
+      <form action='/sign_in' method='post'>
+        <input type='email' name='email' placeholder='Email Address'><br>
+        <input type='password' name='password' placeholder='Pasword'><br>
+        <input type='submit' value='Sign In'><br>
+      </form>
+      <% if flash[:errors] %>
+      <%= flash[:errors] %>
+      <% end %>
+    </div>
+    <div id="no_sign_in">
+      <p class="text">Don't have an account?</p>
+      <form action='/posts'>
+        <input type='submit' value='View Recent Chits?'>
+      </form>
+      <form action='/register'>
+        <input type='submit' value='Sign up!'>
+      </form>
+    </div>
   <% end %>
 </body>
