--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,6 +1,33 @@
-/*body {
-  background: blue;
-}*/
+body {
+  font-family: Helvetica Neue;
+  background-color: #dedfe1;
+}
+#header {
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid grey;
+  text-align: center;
+  padding: 10px;
+  background-color: #f8f8f8;
+  position:relative;
+}
+
+img {
+  float: left;
+  height: 50px;
+  width: 70px;
+}
+
+#title {
+  /*width: 400px;*/
+  text-align: center;
+  font-size: 2em;
+  border: 2px solid #0ab3ef;
+  border-radius: 50%;
+  padding: 10px;
+  line-height: 50px;
+  background-color: white;
+}
 
 #left{
   width: 50%;
@@ -9,10 +36,56 @@
   align: center;
 }
 
-#right{
-  margin-right: 5%;
-
+#account{
   float: right;
-  /*margin: 0 0 50px 50px;*/
-  align: auto;
+  margin-right: 40px;
+}
+
+.status {
+  margin: 5px;
+}
+
+#tag_name {
+  text-align: center;
+  margin: 50px;
+}
+
+#sign_in {
+  padding: 40px;
+  padding-top: 60px;
+  height: 240px;
+  width: 210px;
+  background-color: #0ab3ef;
+  border-radius: 20px;
+  float: right;
+  margin-right: 20%;
+  text-align: center
+}
+
+#sign_in input {
+  width: 200px;
+  margin-bottom: 10px;
+}
+
+.text {
+  color: white;
+  margin-bottom: 50px;
+}
+
+#no_sign_in {
+  padding: 40px;
+  padding-top: 60px;
+  height: 240px;
+  width: 210px;
+  background-color: #0ab3ef;
+  border-radius: 20px;
+  float: left;
+  margin-left: 20%;
+  text-align: center
+}
+
+#no_sign_in input {
+  font-size: 2em;
+  width: 80%;
+  margin-bottom: 30px;
 }
