--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,21 +5,26 @@
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
-<div id='right'>
-<% if current_user %>
-  <h3>Signed in as: <%= @current_user.username %> (<%= @current_user.name %>)</h3>
-<% else %>
-  <h3>Not Signed In</h3>
-<% end %>
-  <% if current_user %>
-  <form action='/log_out' method='post'>
-    <input type='submit' value='Log Out'>
-  </form>
-  <% end %>
-</div>
+    <div id="header">
+      <img src="images/speech_bubble.png"/>
+      <span id="title">Chitter</span>
+      <div id='account'>
+        <% if current_user %>
+          <p class="status">Signed in as: <%= @current_user.username %> (<%= @current_user.name %>)</p>
+          <form action='/log_out' method='post'>
+            <input type='submit' value='Log Out'>
+          </form>
+        <% else %>
+          <p class="status">Not Signed In</p>
+          <form action='/'>
+            <input type='submit' value='Sign In'>
+          </form>
+        <% end %>
+      </div>
+    </div>
 
+    <%= yield %>
 
-<%= yield %>
+    </body>
 
-</body>
-</html>
+    </html>
