--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -1,44 +1,47 @@
 body {
   font-family: Helvetica Neue;
-  background-color: #dedfe1;
+  background-color: #dcdbd9;
 }
+
 #header {
   width: 100%;
-  height: 50px;
+  height: 60px;
   border-bottom: 1px solid grey;
-  text-align: center;
   padding: 10px;
   background-color: #f8f8f8;
   position:relative;
+  margin-bottom: 20px;
 }
 
 img {
   float: left;
   height: 50px;
   width: 70px;
+  margin-top: 5px;
 }
 
 #title {
-  /*width: 400px;*/
-  text-align: center;
+  display: inline-block;
+  position: absolute;
+  margin-left: 40%;
   font-size: 2em;
   border: 2px solid #0ab3ef;
   border-radius: 50%;
   padding: 10px;
-  line-height: 50px;
+  line-height: 38px;
   background-color: white;
 }
 
-#left{
-  width: 50%;
-  float: left;
-  margin: 0 0 10px 10px;
-  align: center;
-}
-
 #account{
+  position: relative;
   float: right;
-  margin-right: 40px;
+  margin-right: 10px;
+  margin-bottom: 15px;
+  padding-left: 10px;
+  border-left: 1px solid #b7b8ba;
+  height: 60px;
+  max-width: 200px;
+  text-align: center;
 }
 
 .status {
@@ -88,4 +91,94 @@ img {
   font-size: 2em;
   width: 80%;
   margin-bottom: 30px;
+}
+
+#new_post {
+  background-color: #e5f2f7;
+  height: 63px;
+  margin: 0 auto;
+  border-radius: 5px;
+  text-align: center;
+}
+
+#new_post #chit {
+  margin-top: 15px;
+  width: 70%;
+  font-size: 1.2em;
+}
+
+#posts {
+  text-align: center;
+  border: 1px solid #b7b8ba;
+  width: 40%;
+  margin-left: 20%;
+  float: left;
+  border-radius: 5px;
+  position: static;
+  min-width: 300px;
+}
+
+#post {
+  background-color: #f8f8f8;
+  border-bottom: 1px solid #b7b8ba;
+  text-align: left;
+  padding: 10px;
+}
+
+#post p {
+  margin: 10px;
+  line-height: 20px;
+  padding: 7px;
+  color: #0ab3ef;
+  font-size: 1.2em
+}
+
+#name {
+  font-weight: bolder;
+  font-size: 1.3em;
+}
+
+#body {
+  background-color: white;
+}
+
+#credits {
+  float: right;
+  display: inline;
+  background-color: #0ab3ef;
+  color: white;
+  height: 190px;
+  width: 15%;
+  text-align: center;
+  border-radius: 10px;
+  margin-right: 20%;
+  padding-top: 30px;
+}
+
+.flash {
+  color: #656565;
+  font-size: 2em;
+  font-weight: bold;
+  margin: 30px;
+}
+
+h1 {
+  text-align: center;
+}
+
+#register {
+  padding: 50px;
+  height: 300px;
+  width: 35%;
+  background-color: #0ab3ef;
+  border-radius: 20px;
+  margin: 0 auto;
+  text-align: center
+}
+
+#register input {
+  width: 80%;
+  font-size: 1.2em;
+  padding: 5px;
+  margin: 5px;
 }
