--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,7 +17,7 @@
         <% else %>
           <p class="status">Not Signed In</p>
           <form action='/'>
-            <input type='submit' value='Sign In'>
+            <input type='submit' value='Log In'>
           </form>
         <% end %>
       </div>
