Fixes bug on homepage

--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -8,7 +8,7 @@
   <h3 id="tag_name">Everyone's favorite social portal :)</h3>
   <% if current_user %>
     <form action='/posts'>
-      <input type='submit' value='View Posts'>
+      <input id="chit_feed" type='submit' value='Chitter Feed'>
     </form>
   <% else %>
     <div id="sign_in">
