--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -182,3 +182,10 @@ h1 {
   padding: 5px;
   margin: 5px;
 }
+
+#chit_feed {
+  display: block;
+  margin: 0 auto;
+  width: 200px;
+  font-size: 3em;
+}
