--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Chitter</title>
+    <title> Chatter</title>
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <div id="header">
       <img src="images/speech_bubble.png"/>
-      <span id="title">Chitter</span>
+      <span id="title">Chatter</span>
       <div id='account'>
         <% if current_user %>
           <p class="status">Signed in as: <%= @current_user.username %> (<%= @current_user.name %>)</p>
