--- a/app/views/links/index.erb
+++ b/app/views/links/index.erb
@@ -25,7 +25,7 @@
     <div id="no_sign_in">
       <p class="text">Don't have an account?</p>
       <form action='/posts'>
-        <input type='submit' value='View Recent Chits?'>
+        <input type='submit' value='View Recent Chat?'>
       </form>
       <form action='/register'>
         <input type='submit' value='Sign up!'>
